Aparecen las encuestas en responder encuestas, aun no se pueden responder